# headroom-kiro-proxy

./: .gitignore  README.md  pyproject.toml
.beads/: interactions.jsonl  metadata.json
.beads/hooks/: post-commit
.claude/: settings.json
.github/workflows/: test.yml
docs/: cache-investigation-2026-07-16.md  design.md  kiro-provider-design.md  spec-cloud-metrics.md  spec-windows-support.md
scripts/: com.kiro-proxy.compression.plist.template  doctor.sh  generate-ca.sh  install.ps1  install.sh  kiro-proxy  kiro-proxy.ps1  kiro-wrapper.sh  uninstall.ps1  uninstall.sh  update.ps1  update.sh
src/: applet.py  birdseye.py  compress.py  connect_proxy.py  generate_certs.py  handler.py  interceptor.py  kiro_translator.py  menubar.py  proxy.py  reporter.py  session_timer.py  stats.py
tests/: test_adversarial.py  test_cache_stability.py  test_compress.py  test_handler.py  test_install_manifest.py  test_interceptor.py  test_proxy.py  test_reporter.py  test_session_timer.py  test_stats.py
