[project]
name = "kiro-proxy"
version = "0.4.0"
description = "Local compression proxy for kiro-cli — cuts token costs ~50%"
requires-python = ">=3.10"
dependencies = [
    "headroom-ai>=0.31.0",
    "rumps>=0.4.0; sys_platform == 'darwin'",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
